-Match detail builder start with function that adds the majority of a player row -really simple styles added to table for the moment -need to add correct classes and styles and make sure it works on mobile, tablet and desktop.

--- a/styles/home.css
+++ b/styles/home.css
@@ -124,7 +124,9 @@ input, select, button {
     cursor: pointer;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10px;
+    font-size: 2em;
+    font-weight: bolder;
 }
 
 .match {
@@ -180,6 +182,20 @@ input, select, button {
 
 .defeat {
     color: #c50000;
+}
+
+.matchDetailTable {
+    width: 100%;
+}
+
+.matchDetailChampion {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.searchedPlayer {
+    color: #ffd700;
 }
 
 /* Media Queries */
